[gd_scene load_steps=4 format=3 uid="uid://cnxpw6xapdk0y"]

[ext_resource type="Script" path="res://Scripts/victory.gd" id="1_yomhr"]
[ext_resource type="FontFile" uid="uid://dd0xh8xgeh62p" path="res://Assets/nasalization-rg.otf" id="2_16uhs"]
[ext_resource type="Texture2D" uid="uid://biov5e27si520" path="res://Assets/Star.png" id="3_62pil"]

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yomhr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -325.0
offset_top = 92.0
offset_right = 353.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.124877, 0.629802, 1.92523e-07, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_16uhs")
theme_override_font_sizes/font_size = 130
text = "VICTORIA"

[node name="YourTime" type="Label" parent="."]
layout_mode = 0
offset_left = 771.0
offset_top = 273.0
offset_right = 1174.0
offset_bottom = 321.0
theme_override_fonts/font = ExtResource("2_16uhs")
theme_override_font_sizes/font_size = 40
text = "TU TIEMPO FUE DE:"

[node name="YourTimeDP" type="Label" parent="."]
layout_mode = 0
offset_left = 827.0
offset_top = 321.0
offset_right = 1230.0
offset_bottom = 429.0
theme_override_fonts/font = ExtResource("2_16uhs")
theme_override_font_sizes/font_size = 90
text = "00:00"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -286.0
offset_right = 290.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="Sprite1" type="Sprite2D" parent="BoxContainer/HBoxContainer"]
texture_filter = 1
position = Vector2(-62, -218)
scale = Vector2(8, 8)
texture = ExtResource("3_62pil")
region_enabled = true
region_rect = Rect2(225.161, 3.39409, 30.2886, 27.1554)

[node name="Sprite2" type="Sprite2D" parent="BoxContainer/HBoxContainer"]
texture_filter = 1
position = Vector2(171, -218)
scale = Vector2(8, 8)
texture = ExtResource("3_62pil")
region_enabled = true
region_rect = Rect2(225.161, 3.39409, 30.2886, 27.1554)

[node name="Sprite3" type="Sprite2D" parent="BoxContainer/HBoxContainer"]
texture_filter = 1
position = Vector2(398, -218)
scale = Vector2(8, 8)
texture = ExtResource("3_62pil")
region_enabled = true
region_rect = Rect2(225.161, 3.39409, 30.2886, 27.1554)

[node name="Message" type="Label" parent="."]
layout_mode = 0
offset_left = 594.0
offset_top = 816.0
offset_right = 1419.0
offset_bottom = 864.0
theme_override_fonts/font = ExtResource("2_16uhs")
theme_override_font_sizes/font_size = 40
text = "¿CREÉS QUE PODÉS HACERLO MEJOR?"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
offset_left = 753.0
offset_top = 903.0
offset_right = 1197.0
offset_bottom = 1007.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_16uhs")
theme_override_font_sizes/font_size = 80
text = " REJUGAR "

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
